commit correcciones front end flask en 'front-end'

--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -20,8 +20,9 @@
 }
 
 .dataUser h2 {
-  margin-left: 20%;
-  margin-top: 2rem;
+  margin-left: 10%;
+  margin-top: 0;
+  padding-top: 10rem;
 }
 
 .inputs_dataUser {
