--- a/templates/gestionUsuarios.html
+++ b/templates/gestionUsuarios.html
@@ -179,19 +179,19 @@
 </div>
 <!-- END MODAL SAVE DATA-USERS -->
 
-<!-- SECCION PRINCIPAL -->
-<div id="main">
+<main class="container">
+  <!-- SECCION PRINCIPAL -->
   <div class="base-main">
     <!-- AREA PRINCIPAL -->
-    <input
-      class="buscador"
-      type="email"
-      placeholder="Buscar por cédula"
-      name="searchUser"
-    />
-    <button class="btnBuscar">Buscar Usuario</button>
     <section class="dataUser">
       <h2>Datos del Usuario</h2>
+      <input
+        class="buscador"
+        type="email"
+        placeholder="Buscar por cédula"
+        name="searchUser"
+      />
+      <button class="btnBuscar">Buscar Usuario</button>
       <!-- search bar right align -->
       <form action="#" class="inputs_dataUser">
         <label for="cedula">Cédula</label>
@@ -300,7 +300,7 @@
       </div>
     </div>
   </div>
-</div>
+</main>
 
 <script>
   function seleccionar(tr, value) {
