--- a/templates/base.html
+++ b/templates/base.html
@@ -126,7 +126,8 @@
               </a>
             </li>
             <li>
-              <a href={{ url_for("user") }}>
+              <!-- TODO if logged in then go to user -->
+              <a href="#">
                 <span
                   class="icon modal-btn"
                   onclick="openModal()"
@@ -212,84 +213,88 @@
         </form>
       </div>
       <!-- END MODAL BOX -->
-      <div id="mainContent">{% block content %} {% endblock %}</div>
-    </div>
-    <footer id="footer">
-      <div id="nav-footer">
-        <ul id="nav-footer-1" class="nav-footer">
-          <li><a href="#">Historia</a></li>
-          <li><a href="#">Nuestra Marca</a></li>
-          <li><a href="#">Visión</a></li>
-          <li><a href="#">Metas</a></li>
-          <li><a href="#">Valores Rotana</a></li>
-          <li><a href="#">Ejecutivos Corporativos</a></li>
-        </ul>
-        <ul id="nav-footer-2" class="nav-footer">
-          <li><a href="#">Clientes Corporativos</a></li>
-          <li><a href="#">Noticias</a></li>
-          <li><a href="#">Premios</a></li>
-          <li><a href="#">Multimedia</a></li>
-          <li><a href="#">Aperturas</a></li>
-          <li><a href="#">Tours</a></li>
-        </ul>
-        <ul id="nav-footer-3" class="nav-footer">
-          <li>WEBSITES ROTANA</li>
-          <li><a href="https://www.rotana.com/">rotana.com</a></li>
-          <li>
-            <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
-          </li>
-          <li>
-            <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
-          </li>
-          <li>
-            <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
-          </li>
-        </ul>
-      </div>
-      <!-- LOGOS ROTANA RYHAAN FOOTER -->
-      <div class="logo-footer">
-        <a href="index.html">
-          <img
-            src="{{ url_for('static',
-              filename='img/svg/logo-ryhaan_dubai.svg') }}"
-            alt="Logo Rose Ryhaan Dubai"
-            height="35"
-          />
-        </a>
-        <a href="https://rotana.com">
-          <img
-            src="{{ url_for('static',
-              filename='img/svg/logo-rotana.svg') }}"
-            alt="logo Rotana"
-            height="35"
-          />
-        </a>
-      </div>
+      <div id="mainContent">
+        {% block content %} {% endblock %}
 
-      <div class="footer-bottom">
-        <div>
-          <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
-        </div>
-        <div>
-          <div class="social-media">
-            <span>
-              <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
-            </span>
-            <span>
-              <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
-            </span>
+        <footer id="footer">
+          <div id="nav-footer">
+            <ul id="nav-footer-1" class="nav-footer">
+              <li><a href="#">Historia</a></li>
+              <li><a href="#">Nuestra Marca</a></li>
+              <li><a href="#">Visión</a></li>
+              <li><a href="#">Metas</a></li>
+              <li><a href="#">Valores Rotana</a></li>
+              <li><a href="#">Ejecutivos Corporativos</a></li>
+            </ul>
+            <ul id="nav-footer-2" class="nav-footer">
+              <li><a href="#">Clientes Corporativos</a></li>
+              <li><a href="#">Noticias</a></li>
+              <li><a href="#">Premios</a></li>
+              <li><a href="#">Multimedia</a></li>
+              <li><a href="#">Aperturas</a></li>
+              <li><a href="#">Tours</a></li>
+            </ul>
+            <ul id="nav-footer-3" class="nav-footer">
+              <li>WEBSITES ROTANA</li>
+              <li><a href="https://www.rotana.com/">rotana.com</a></li>
+              <li>
+                <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
+              </li>
+              <li>
+                <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
+              </li>
+              <li>
+                <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
+              </li>
+            </ul>
           </div>
-        </div>
+          <!-- LOGOS ROTANA RYHAAN FOOTER -->
+          <div class="logo-footer">
+            <a href="index.html">
+              <img
+                src="{{ url_for('static',
+                  filename='img/svg/logo-ryhaan_dubai.svg') }}"
+                alt="Logo Rose Ryhaan Dubai"
+                height="35"
+              />
+            </a>
+            <a href="https://rotana.com">
+              <img
+                src="{{ url_for('static',
+                  filename='img/svg/logo-rotana.svg') }}"
+                alt="logo Rotana"
+                height="35"
+              />
+            </a>
+          </div>
+    
+          <div class="footer-bottom">
+            <div>
+              <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+            </div>
+            <div>
+              <div class="social-media">
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
+                </span>
+                <span>
+                  <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
-    </footer>
+    </div>
+
   </body>
 </html>
