--- a/templates/homeAdmin.html
+++ b/templates/homeAdmin.html
@@ -11,6 +11,7 @@
 />
 {% endblock %} {% block content %}
 <!-- MODAL DESCRIPTION AND VALUE EDITION -->
+
 <div id="modal-id02" class="modal">
   <form class="modal-content animate" action="/action_page.php">
     <div class="modal-container">
@@ -284,133 +285,141 @@
   </form>
 </div>
 <!-- END MODAL DELETE ROOMS -->
-
-<!-- SECCION PRINCIPAL -->
-<div id="main">
-  <div class="base-main">
-    <!-- AREA PRINCIPAL -->
-    <!-- LISTA HABITACIONES -->
-    <input
-      class="buscador"
-      type="email"
-      placeholder="Buscar por ID"
-      name="searchRoom"
-    />
-    <button class="btnBuscar">Buscar Habitación</button>
-    <br />
-    <button
-      class="btnDescripcion"
-      onclick="document.getElementById('modal-id02').style.display='block'"
-      data-open="modal-id02"
-    >
-      Editar Descripción y Valor
-    </button>
-    <h2>Habitaciones</h2>
-    <!-- <input class="btnEditar" type="submit" name="botonEditar" value="Editar Descripción y Valor" /> -->
-    <div class="rooms">
-      <div>
-        <table class="roomsTable">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Estado</th>
-              <th>Ult.Ocup.</th>
-              <th>Tipo</th>
-              <th>$(USD)</th>
-              <th>
-                All<input type="checkbox" name="check[]" value="0" id="chk0" />
-              </th>
-            </tr>
-          </thead>
-          <tbody style="cursor: pointer">
-            <tr onclick="seleccionar(this,1)">
-              <td>HE-1</td>
-              <td>Desocupada</td>
-              <td>24/07/2022</td>
-              <td>Estándar</td>
-              <td>$400</td>
-              <td onclick="seleccionar(this,1)">
-                <input type="checkbox" name="check[]" value="1" id="chk1" />
-              </td>
-            </tr>
-            <tr onclick="seleccionar(this,2)">
-              <td>HE-2</td>
-              <td>Desocupada</td>
-              <td>02/07/2022</td>
-              <td>Estándar</td>
-              <td>$400</td>
-              <td onclick="seleccionar(this,2)">
-                <input type="checkbox" name="check[]" value="2" id="chk2" />
-              </td>
-            </tr>
-            <tr onclick="seleccionar(this,3)">
-              <td>HE-3</td>
-              <td>Desocupada</td>
-              <td>25/07/2022</td>
-              <td>Estándar</td>
-              <td>$400</td>
-              <td onclick="seleccionar(this,3)">
-                <input type="checkbox" name="check[]" value="3" id="chk3" />
-              </td>
-            </tr>
-            <tr onclick="seleccionar(this,4)">
-              <td>HE-4</td>
-              <td>Desocupada</td>
-              <td>18/07/2022</td>
-              <td>Estándar</td>
-              <td>$400</td>
-              <td onclick="seleccionar(this,4)">
-                <input type="checkbox" name="check[]" value="4" id="chk4" />
-              </td>
-            </tr>
-            <tr onclick="seleccionar(this,5)">
-              <td>HE-5</td>
-              <td>Desocupada</td>
-              <td>29/06/2022</td>
-              <td>Estándar</td>
-              <td>$400</td>
-              <td onclick="seleccionar(this,5)">
-                <input type="checkbox" name="check[]" value="5" id="chk5" />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div>
+<main class="container">
+  <!-- SECCION PRINCIPAL -->
+  <div id="main">
+    <div class="base-main">
+      <!-- AREA PRINCIPAL -->
+      <section class="dataUser">
+        <h2>Gestión Administradores</h2>
+        <!-- LISTA HABITACIONES -->
         <input
-          class="btnEditar"
-          type="submit"
-          name="botonEditar"
-          value="Agregar Habitación"
-          onclick="document.getElementById('modal-id05').style.display='block'"
-          data-open="modal-id05"
+          class="buscador"
+          type="email"
+          placeholder="Buscar por ID"
+          name="searchRoom"
         />
+        <button class="btnBuscar">Buscar Habitación</button>
         <br />
-        <select name="estado" id="estado">
-          <option value="d">Desocupada</option>
-          <option value="o">Ocupada</option>
-          <option value="m">Mantenimiento</option>
-          <option value="i">Inactiva</option>
-        </select>
-        <h4
-          onclick="document.getElementById('modal-id06').style.display='block'"
-          data-open="modal-id06"
+        <button
+          class="btnDescripcion"
+          onclick="document.getElementById('modal-id02').style.display='block'"
+          data-open="modal-id02"
         >
-          <strong><a href="#">Eliminar Habitación</a></strong>
-        </h4>
-        <input
-          class="btnEditar"
-          type="submit"
-          name="botonEditar"
-          value="Guardar Cambios"
-          onclick="document.getElementById('modal-id04').style.display='block'"
-          data-open="modal-id04"
-        />
-      </div>
+          Editar Descripción y Valor
+        </button>
+        <h2>Habitaciones</h2>
+        <!-- <input class="btnEditar" type="submit" name="botonEditar" value="Editar Descripción y Valor" /> -->
+        <div class="rooms">
+          <div>
+            <table class="roomsTable">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Estado</th>
+                  <th>Ult.Ocup.</th>
+                  <th>Tipo</th>
+                  <th>$(USD)</th>
+                  <th>
+                    All<input
+                      type="checkbox"
+                      name="check[]"
+                      value="0"
+                      id="chk0"
+                    />
+                  </th>
+                </tr>
+              </thead>
+              <tbody style="cursor: pointer">
+                <tr onclick="seleccionar(this,1)">
+                  <td>HE-1</td>
+                  <td>Desocupada</td>
+                  <td>24/07/2022</td>
+                  <td>Estándar</td>
+                  <td>$400</td>
+                  <td onclick="seleccionar(this,1)">
+                    <input type="checkbox" name="check[]" value="1" id="chk1" />
+                  </td>
+                </tr>
+                <tr onclick="seleccionar(this,2)">
+                  <td>HE-2</td>
+                  <td>Desocupada</td>
+                  <td>02/07/2022</td>
+                  <td>Estándar</td>
+                  <td>$400</td>
+                  <td onclick="seleccionar(this,2)">
+                    <input type="checkbox" name="check[]" value="2" id="chk2" />
+                  </td>
+                </tr>
+                <tr onclick="seleccionar(this,3)">
+                  <td>HE-3</td>
+                  <td>Desocupada</td>
+                  <td>25/07/2022</td>
+                  <td>Estándar</td>
+                  <td>$400</td>
+                  <td onclick="seleccionar(this,3)">
+                    <input type="checkbox" name="check[]" value="3" id="chk3" />
+                  </td>
+                </tr>
+                <tr onclick="seleccionar(this,4)">
+                  <td>HE-4</td>
+                  <td>Desocupada</td>
+                  <td>18/07/2022</td>
+                  <td>Estándar</td>
+                  <td>$400</td>
+                  <td onclick="seleccionar(this,4)">
+                    <input type="checkbox" name="check[]" value="4" id="chk4" />
+                  </td>
+                </tr>
+                <tr onclick="seleccionar(this,5)">
+                  <td>HE-5</td>
+                  <td>Desocupada</td>
+                  <td>29/06/2022</td>
+                  <td>Estándar</td>
+                  <td>$400</td>
+                  <td onclick="seleccionar(this,5)">
+                    <input type="checkbox" name="check[]" value="5" id="chk5" />
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div>
+            <input
+              class="btnEditar"
+              type="submit"
+              name="botonEditar"
+              value="Agregar Habitación"
+              onclick="document.getElementById('modal-id05').style.display='block'"
+              data-open="modal-id05"
+            />
+            <br />
+            <select name="estado" id="estado">
+              <option value="d">Desocupada</option>
+              <option value="o">Ocupada</option>
+              <option value="m">Mantenimiento</option>
+              <option value="i">Inactiva</option>
+            </select>
+            <h4
+              onclick="document.getElementById('modal-id06').style.display='block'"
+              data-open="modal-id06"
+            >
+              <strong><a href="#">Eliminar Habitación</a></strong>
+            </h4>
+            <input
+              class="btnEditar"
+              type="submit"
+              name="botonEditar"
+              value="Guardar Cambios"
+              onclick="document.getElementById('modal-id04').style.display='block'"
+              data-open="modal-id04"
+            />
+          </div>
+        </div>
+      </section>
     </div>
   </div>
-</div>
-
+</main>
 <script>
   function seleccionar(tr, value) {
     this.chk1.click();
