--- a/templates/users.html
+++ b/templates/users.html
@@ -180,10 +180,10 @@
 <!-- END MODAL SAVE DATA-USERS -->
 
 <!-- SECCION PRINCIPAL -->
-<div id="main">
+<main class="container">
   <div class="base-main">
     <!-- AREA PRINCIPAL -->
-    <div class="dataUser">
+    <section class="dataUser">
       <h2>Datos de Usuario</h2>
       <form action="#" class="inputs_dataUser">
         <label class="texto" for="cedula">Cédula</label>
@@ -212,7 +212,7 @@
         onclick="document.getElementById('modal-id04').style.display='block'"
         data-open="modal-id04"
       />
-    </div>
+    </section>
     <!-- LISTA RESERVAS -->
     <div class="reserves">
       <h2>Listado de Reservas</h2>
@@ -292,12 +292,12 @@
       </div>
     </div>
   </div>
+</main>
 
-  <script>
-    function seleccionar(tr, value) {
-      this.chk1.click();
-    }
-  </script>
-</div>
+<script>
+  function seleccionar(tr, value) {
+    this.chk1.click();
+  }
+</script>
 
 {% endblock %}
