--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -1,4 +1,7 @@
-.dataUser {
+.dataUser form {
+  display: flex;
+  flex-direction: column;
+  margin: auto auto auto 25%;
   /* padding-top: 7rem; */
 }
 
@@ -9,7 +12,7 @@
   height: 35px;
   border-radius: 25px;
 }
-.dataUser button {
+/* .dataUser button {
   width: 11rem;
   height: 2rem;
   text-align: center;
@@ -17,7 +20,7 @@
   background-color: #005596;
   color: #f2f2f2;
   cursor: pointer;
-}
+} */
 
 .dataUser h2 {
   margin-left: 10%;
@@ -64,7 +67,7 @@
     content: top;
 } */
 
-.btnEnviar {
+.dataUser .btnEnviar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
@@ -74,4 +77,5 @@
   font-weight: bold;
   font-size: 1rem;
   margin-bottom: 6rem;
+  cursor: pointer;
 }
