--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% block head %}
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('static', filename='css/base.css') }}"
-    />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/>
     {% endblock %}
 
     <!-- FONTAWESOME OK -->
@@ -215,85 +211,86 @@
       <!-- END MODAL BOX -->
       <div id="mainContent">
         {% block content %} {% endblock %}
-
-        <footer id="footer">
-          <div id="nav-footer">
-            <ul id="nav-footer-1" class="nav-footer">
-              <li><a href="#">Historia</a></li>
-              <li><a href="#">Nuestra Marca</a></li>
-              <li><a href="#">Visión</a></li>
-              <li><a href="#">Metas</a></li>
-              <li><a href="#">Valores Rotana</a></li>
-              <li><a href="#">Ejecutivos Corporativos</a></li>
-            </ul>
-            <ul id="nav-footer-2" class="nav-footer">
-              <li><a href="#">Clientes Corporativos</a></li>
-              <li><a href="#">Noticias</a></li>
-              <li><a href="#">Premios</a></li>
-              <li><a href="#">Multimedia</a></li>
-              <li><a href="#">Aperturas</a></li>
-              <li><a href="#">Tours</a></li>
-            </ul>
-            <ul id="nav-footer-3" class="nav-footer">
-              <li>WEBSITES ROTANA</li>
-              <li><a href="https://www.rotana.com/">rotana.com</a></li>
-              <li>
-                <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
-              </li>
-              <li>
-                <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
-              </li>
-              <li>
-                <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
-              </li>
-            </ul>
-          </div>
-          <!-- LOGOS ROTANA RYHAAN FOOTER -->
-          <div class="logo-footer">
-            <a href="index.html">
-              <img
-                src="{{ url_for('static',
-                  filename='img/svg/logo-ryhaan_dubai.svg') }}"
-                alt="Logo Rose Ryhaan Dubai"
-                height="35"
-              />
-            </a>
-            <a href="https://rotana.com">
-              <img
-                src="{{ url_for('static',
-                  filename='img/svg/logo-rotana.svg') }}"
-                alt="logo Rotana"
-                height="35"
-              />
-            </a>
-          </div>
-    
-          <div class="footer-bottom">
-            <div>
-              <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
-            </div>
-            <div>
-              <div class="social-media">
-                <span>
-                  <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
-                </span>
-                <span>
-                  <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
-                </span>
-                <span>
-                  <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
-                </span>
-                <span>
-                  <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
-                </span>
-                <span>
-                  <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
-                </span>
-              </div>
-            </div>
-          </div>
-        </footer>
       </div>
+
+      <footer id="footer">
+        <div id="nav-footer">
+          <ul id="nav-footer-1" class="nav-footer">
+            <li><a href="#">Historia</a></li>
+            <li><a href="#">Nuestra Marca</a></li>
+            <li><a href="#">Visión</a></li>
+            <li><a href="#">Metas</a></li>
+            <li><a href="#">Valores Rotana</a></li>
+            <li><a href="#">Ejecutivos Corporativos</a></li>
+          </ul>
+          <ul id="nav-footer-2" class="nav-footer">
+            <li><a href="#">Clientes Corporativos</a></li>
+            <li><a href="#">Noticias</a></li>
+            <li><a href="#">Premios</a></li>
+            <li><a href="#">Multimedia</a></li>
+            <li><a href="#">Aperturas</a></li>
+            <li><a href="#">Tours</a></li>
+          </ul>
+          <ul id="nav-footer-3" class="nav-footer">
+            <li>WEBSITES ROTANA</li>
+            <li><a href="https://www.rotana.com/">rotana.com</a></li>
+            <li>
+              <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
+            </li>
+            <li>
+              <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
+            </li>
+            <li>
+              <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
+            </li>
+          </ul>
+        </div>
+        <!-- LOGOS ROTANA RYHAAN FOOTER -->
+        <div class="logo-footer">
+          <a href="index.html">
+            <img
+              src="{{ url_for('static',
+                filename='img/svg/logo-ryhaan_dubai.svg') }}"
+              alt="Logo Rose Ryhaan Dubai"
+              height="35"
+            />
+          </a>
+          <a href="https://rotana.com">
+            <img
+              src="{{ url_for('static',
+                filename='img/svg/logo-rotana.svg') }}"
+              alt="logo Rotana"
+              height="35"
+            />
+          </a>
+        </div>
+  
+        <div class="footer-bottom">
+          <div>
+            <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+          </div>
+          <div>
+            <div class="social-media">
+              <span>
+                <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
+              </span>
+              <span>
+                <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
+              </span>
+              <span>
+                <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
+              </span>
+              <span>
+                <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
+              </span>
+              <span>
+                <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </footer>
+
     </div>
 
   </body>
