--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -69,45 +69,53 @@
     <section class="dataUser">
       <h2>Contáctanos</h2>
       <!-- search bar right align -->
-      <form action="#" class="inputs_dataUser">
-        <label for="correo">Correo</label>
-        <input type="email" name="correo" id="correo" />
-        <br />
-        <label for="nombre">Nombre</label>
-        <input type="email" name="nombre" id="nombre" />
-        <br />
-        <label for="apellido">Apellido</label>
-        <input type="email" name="apellido" id="apellido" />
-        <br />
+      <form class="form" action="/entry" method="POST" class="inputs_dataUser">
+        <p>
+          <label for="correo">Correo</label>
+          <input type="email" name="correo" id="correo" />
+        </p>
+        <p>
+          <label for="nombre">Nombre</label>
+          <input type="email" name="nombre" id="nombre" />
+        </p>
+        <p>
+          <label for="apellido">Apellido</label>
+          <input type="email" name="apellido" id="apellido" />
+        </p>
         <!-- <label for="fechaNacimiento">Fecha de Nacimiento</label>
           <input type="date" name="fechaNacimiento" id="fechaNacimiento">
           <br> -->
-        <label for="asunto">Asunto</label>
-        <input type="email" name="asunto" id="asunto" />
-        <br />
-        <label for="mensaje">Mensaje</label>
-        <textarea
-          name="mensaje"
-          id="mensaje"
-          maxlength="630"
-          cols="30"
-          rows="10"
-        ></textarea>
+        <p>
+          <label for="asunto">Asunto</label>
+          <input type="email" name="asunto" id="asunto" />
+        </p>
+        <p>
+          <label for="mensaje">Mensaje</label>
+          <textarea
+            name="mensaje"
+            id="mensaje"
+            maxlength="630"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </p>
         <!-- <br>
           <label for="estado">Estado</label>
           <select name="estado" id="estado">
             <option value="a">Activo</option>
             <option value="i">Inactivo</option>
           </select> -->
+        <p>
+          <input
+            class="btnEnviar"
+            type="submit"
+            name="botonEnviar"
+            value="Enviar"
+            onclick="document.getElementById('modal-id02').style.display='block'"
+            data-open="modal-id02"
+          />
+        </p>
       </form>
-      <input
-        class="btnEnviar"
-        type="submit"
-        name="botonEnviar"
-        value="Enviar"
-        onclick="document.getElementById('modal-id02').style.display='block'"
-        data-open="modal-id02"
-      />
     </section>
   </div>
 </main>
