--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -9,7 +9,68 @@
   type="text/css"
   href="{{ url_for('static', filename='css/reservas.css') }}"
 />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/reviews.css') }}"
+/>
 {% endblock %} {% block content %}
 <h2>Reservas</h2>
-<a href={{ url_for("home") }}>Home</a>
+
+<main class="container">
+  <section>
+    <h1>Comentanos tu experiencia</h1>
+    <!-- <p><span class="fa fa-star rated-star"></span>
+      <span class="fa fa-star"></span></p> -->
+
+    <form class="form" method="POST">
+      <p class="star-rating">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="text">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="text">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="text">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="text">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="text">1 star</label>
+      </p>
+
+      <p class="form__input">
+        <label for="entry" class="form__label">Escribe aquí:</label>
+        <textarea
+          name="review-content"
+          id="entry"
+          class="form__textarea"
+        ></textarea>
+      </p>
+      <button type="submit" class="form__submit">Enviar</button>
+    </form>
+  </section>
+  <section>
+    <h1>Recent posts</h1>
+    {% for entry in review_entries %}
+    <article class="entry">
+      <div>
+        <p>
+          %} {% if entry[1] == '1' %}
+          <font color="orange">★</font>★★★★ {% elif entry[1] == '2' %}
+          <font color="orange">★★</font>★★★ {% elif entry[1] == '3' %}
+          <font color="orange">★★★</font>★★ {% elif entry[1] == '4' %}
+          <font color="orange">★★★★</font>★ {% elif entry[1] == '5' %}
+          <font color="orange">★★★★★</font>
+          {% else %} ★★★★★ {% endif %}
+        </p>
+        <h2 class="entry__title">
+          {{ entry[2] | truncate(30, true) }} • {{ entry[1] }} de 5
+        </h2>
+        <time class="entry__date" datetime="24-10-2019">• {{ entry[0] }}</time>
+      </div>
+      <p class="entry__content">{{ entry[2] }}</p>
+    </article>
+    {% endfor %}
+  </section>
+</main>
+
 {% endblock %}
