commit correcciones a calificación en 'front-end-flask'

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,10 +156,10 @@
         <br />
         <blockquote>
           <p>
-            <em>"La mejor experiencia para la familia"</em>
-            &#9733;&#9733;&#9733;&#9733;&#9733;
+            <em>"La mejor experiencia para la familia" </em>
+            • &#9733;&#9733;&#9733;&#9733;&#9733;
           </p>
-          <p>- Bradley Cooper</p>
+          <p>• Bradley Cooper</p>
         </blockquote>
         <br />
         <p>
