--- a/static/css/reviews.css
+++ b/static/css/reviews.css
@@ -1,3 +1,15 @@
+.page_title h2 {
+  margin-left: 10%;
+  margin-top: 0;
+  padding-top: 10rem;
+}
+.container section {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* text-align: center; */
+  margin: auto;
+}
 .star-rating {
   float: left;
   height: 46px;
@@ -14,7 +26,7 @@
   white-space: nowrap;
   cursor: pointer;
   font-size: 30px;
-  color: #ccc;
+  /* color: #ccc; */
 }
 .star-rating:not(:checked) > label:before {
   content: "★ ";
