--- a/templates/users.html
+++ b/templates/users.html
@@ -184,6 +184,8 @@
   <div class="base-main">
     <!-- AREA PRINCIPAL -->
     <section class="dataUser">
+      <h2>¡Bienvenido, {{ name.title() }}!</h2>
+
       <h2>Datos de Usuario</h2>
       <form action="#" class="inputs_dataUser">
         <label class="texto" for="cedula">Cédula</label>
