--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    {% block head %}
-
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/>
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}"> -->
+    {% block head %}
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/> -->
     {% endblock %}
 
     <!-- FONTAWESOME OK -->
@@ -294,4 +294,6 @@
     </div>
 
   </body>
+  {% block scripts %}
+  {% endblock %}
 </html>
