--- a/static/css/base.css
+++ b/static/css/base.css
@@ -108,8 +108,6 @@ pasó de nth-child(2) a nth-child(1) */
     brightness(110%) contrast(95%); */
 }
 
-<<<<<<< HEAD:css/style.css
-=======
 /* TEXTO SIDEBAR */
 .sidebar ul li a .title {
   position: relative;
@@ -128,7 +126,6 @@ pasó de nth-child(2) a nth-child(1) */
   max-width: 1.75rem;
 } */
 
->>>>>>> 43c8b59d6c7b60d623183800d8f3d8f54193d3c8:static/css/base.css
 .sidebar ul li:hover a,
 .sidebar ul li.hovered a {
   color: var(--blue);
@@ -214,11 +211,7 @@ button:hover {
   /* opacity: 0.8; */
   text-decoration: underline;
 }
-<<<<<<< HEAD:css/style.css
 .toggle{
-=======
-.toggle {
->>>>>>> 43c8b59d6c7b60d623183800d8f3d8f54193d3c8:static/css/base.css
   display: flex;
   position: relative;
   width: 2.5rem;
@@ -395,6 +388,13 @@ footer div h5 {
   height: 1.5rem;
   border-radius: 1.5rem;
   border-color: var(--blue);
+
+  /* width: 100%; */
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: flex;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 /* FONDO MODAL LOGIN BOX */
@@ -479,8 +479,8 @@ footer div h5 {
 } */
 /*assign full width inputs*/
 /* TEXT BOX FORMULARIO LOGIN */
-input[type="text"],
-input[type="password"],
+.modal input[type="text"],
+.modal input[type="password"],
 .campo-modal {
   width: 100%;
   padding: 12px 20px;
