--- a/static/css/contacto.css
+++ b/static/css/contacto.css
@@ -1,79 +1,41 @@
 .dataUser form {
   display: flex;
   flex-direction: column;
-  margin: auto auto auto 25%;
-  /* padding-top: 7rem; */
+  margin: auto auto auto 20%;
 }
-
-.dataUser input:nth-child(1) {
-  margin-left: 30%;
-  margin-bottom: 1rem;
-  width: 300px;
-  height: 35px;
-  border-radius: 25px;
-}
-/* .dataUser button {
-  width: 11rem;
-  height: 2rem;
-  text-align: center;
-  border: none;
-  background-color: #005596;
-  color: #f2f2f2;
-  cursor: pointer;
-} */
 
 .dataUser h2 {
-  margin-left: 10%;
-  margin-top: 0;
-  padding-top: 10rem;
+  margin-top: 10rem;
+  margin-bottom: 1rem;
 }
 
-.inputs_dataUser {
-  margin-left: 30%;
-  padding: 1rem;
-}
-
-.inputs_dataUser label {
+.dataUser label {
   width: 8rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin-right: 1rem;
   margin-top: 1rem;
   font-weight: bold;
 }
-.inputs_dataUser textarea {
+.dataUser textarea {
   resize: none;
   width: 40rem;
   height: 8rem;
+  margin-bottom: 1rem;
 }
 
-.inputs_dataUser input {
+.dataUser input {
+  width: 24rem;
   height: 2rem;
 }
-
-.inputs_dataUser input:nth-of-type(-n + 4) {
-  width: 20rem;
-}
-/* .inputs_dataUser input:last-child{
-  width: 50rem;
-  height: 10rem;
-  vertical-align: bottom;
-  
-} */
-/* select{
-    height: 2rem;
-    width: 15rem;
-    text-align: center;
-    content: top;
-} */
 
 .dataUser .btnEnviar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
-  width: 6rem;
+  width: 8rem;
   height: 2.5rem;
-  margin-left: 70%;
+  margin-left: auto;
   font-weight: bold;
   font-size: 1rem;
   margin-bottom: 6rem;
