--- a/static/css/gestionAdministradores.css
+++ b/static/css/gestionAdministradores.css
@@ -1,87 +1,168 @@
-.buscador {
-  margin-top: 9rem;
-  margin-left: 42%;
-  margin-bottom: 1rem;
-  margin-right: 1rem;
-  height: 35px;
-  border-radius: 25px;
-  text-align: center;
+.dataUser form {
+  display: flex;
+  flex-direction: column;
+  margin: auto auto 3rem 10%;
 }
 
-.btnBuscar {
-  width: 11rem;
-  height: 2rem;
-  text-align: center;
-  border: none;
+.form_dataUser{
+  display: none;
+}
+
+.dataUser h2{
+  margin: 0 0 2rem 10%;
+  padding-top: 9rem;
+}
+/* textarea{
+  margin-left: 20%;
+  float:right;
+  resize: none;
+} */
+
+.btnAgregarAdmin{
+  width: 8rem;
+  margin: 0 0 1rem 10%;
+  /* float: right; */
   background-color: #005596;
   color: #f2f2f2;
-  cursor: pointer;
-}
-
-.dataUser input:nth-child(1) {
-  margin-left: 30%;
-  margin-bottom: 1rem;
-  width: 300px;
-  height: 35px;
-  border-radius: 25px;
-}
-
-.dataUser button {
-  width: 11rem;
-  height: 2rem;
-  text-align: center;
   border: none;
-  background-color: #005596;
-  color: #f2f2f2;
-  cursor: pointer;
+  height: 2.5rem;
+  /* font-weight: bold; */
+  font-size: 0.85rem;
+}
+.dataUser h4{
+  margin: 0 0 1rem 10%;
 }
 
-.dataUser h2 {
-  margin-left: 10%;
-  margin-top: 0;
-  padding-top: 10rem;
-}
-
-.inputs_dataUser {
-  margin-left: 30%;
-  padding: 1rem;
-}
-
-.inputs_dataUser label {
-  width: 12rem;
-  display: inline-block;
-  margin-right: 1rem;
-  margin-top: 1rem;
+.dataUser label {
+  width: 16rem;
+  /* display: flex;
+  flex-direction: column; */
+  font-size: 0.85rem;
   font-weight: bold;
 }
 
+.input_user {
+  width: 20rem;
+  height: 1.75rem;
+  margin-bottom: 1rem;
+  font-size: 0.75rem;
+}
+#cancel_user,
+.inputs_dataUser input[type="submit"] {
+  display: inline-block;
+  width: 8rem;
+  height: 1.5rem;
+  margin: 0 1rem 1rem 1rem;
+}
+
+table {
+  margin-left: 10%;
+  border-collapse: separate;
+  border: black 1px solid;
+  background-color: lightgray;
+  margin-bottom: 0.4rem;
+}
+th:nth-child(1) {
+  width:auto;
+  padding: 0 1rem 1rem 1rem;
+}
+th {
+  width:auto;
+  min-width: 1rem;
+  padding: 0 2rem 1rem 2rem;
+  text-align: center;
+  border-bottom-style: double;
+}
+
+td {
+  padding: 0.5rem;
+  text-align: center;
+  vertical-align: center;
+}
+
+/* .buscador {
+  margin: 2rem 1rem 1rem 20rem;
+  margin-top: 2rem;
+  margin-left: 42%;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  height: 2rem;
+  border-radius: 25px;
+  text-align: center;
+} */
+
+/* .btnBuscar {
+  width: 11rem;
+  height: 2rem;
+  text-align: center;
+  border: none;
+  background-color: #005596;
+  color: #f2f2f2;
+  cursor: pointer;
+} */
+
+
+/* .inputs_dataUser {
+  margin-left: 30%;
+  padding: 1rem;
+} */
+
+/* .inputs_dataUser label {
+  width: 12rem;
+  display: inline-block;
+  margin-right: 1rem;
+  margin-top: 1.5rem;
+  font-weight: bold;
+  margin-left: 15%;
+}
+
 .inputs_dataUser input {
+  width: 15rem;
   height: 2rem;
 }
-
-.inputs_dataUser input:nth-of-type(-n + 3) {
-  width: 15rem;
-}
-
-.inputs_dataUser input:nth-of-type(+ n + 5) {
-  width: 15rem;
+.inputs_dataUser input[type="date"]{
+  text-align: center;
 }
 
 select {
   height: 2rem;
   width: 15rem;
   text-align: center;
-}
+} */
 
-.btnGuardar {
+/* .btnGuardar {
   background-color: #005596;
   color: #f2f2f2;
   border: none;
-  width: 6rem;
+  width: 10rem;
   height: 2.5rem;
-  margin-left: 43%;
+  margin-left: 23rem;
   font-weight: bold;
   font-size: 1rem;
   margin-top: 1.5rem;
   margin-bottom: 6rem;
+} */
+
+.btnEditar {
+  background-color: rgb(131, 176, 42);
+  color: #f2f2f2;
+  border: none;
+  width: 3.5rem;
+  height: 1.5rem;
+  font-weight: bold;
+  margin-right: 0.5rem;
+  padding:0.25rem;
+  /* border-radius: 50%; */
+  /* font-size: 1rem; */
 }
+.btnEliminar {
+  background-color: rgb(191, 12, 12);
+  color: #f2f2f2;
+  border: none;
+  border-radius: 50%;
+  height: 1.5rem;
+  font-weight: bold;
+  padding:0.25rem;
+  /* font-size: 1rem; */
+}
+
